# zephyr-linux-ble-copro

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Kconfig  Makefile  README.md  prj.conf  west.yml
ble-copro-stream-server-rs/: Cargo.toml
ble-copro-stream-server-rs/examples/: server.rs
ble-copro-stream-server-rs/src/: ble.rs  control_channel.rs  lib.rs  linky.rs  stream_channel.rs  stream_message.rs  stream_server.rs  timestamp.rs  xiaomi.rs
docs/: bluetooth-xiaomi.md  usb_net.md
examples/: Makefile  server.c
include/: ble_observer.h  led.h  linky.h  stream_client.h  usb_net.h  xiaomi.h
src/: ble_observer.c  led.c  linky.c  main.c  observer.c  stream_client.c  usb_net.c  xiaomi.c
