[package]
name = "ble-copro-stream-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
thiserror = "2"
byteorder = "1"
tokio = { version = "1.10.0", features = ["full"] }
chrono = { version = "0.4", optional = true }

[dev-dependencies]